0.9.0/_sources/generated/statsmodels.miscmodels.count.PoissonOffsetGMLE.rst.txt
statsmodels.miscmodels.count.PoissonOffsetGMLE
==============================================

.. currentmodule:: statsmodels.miscmodels.count

.. autoclass:: PoissonOffsetGMLE

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~PoissonOffsetGMLE.expandparams
    
    
      ~PoissonOffsetGMLE.fit
    
    
      ~PoissonOffsetGMLE.from_formula
    
    
      ~PoissonOffsetGMLE.hessian
    
    
      ~PoissonOffsetGMLE.hessian_factor
    
    
      ~PoissonOffsetGMLE.information
    
    
      ~PoissonOffsetGMLE.initialize
    
    
      ~PoissonOffsetGMLE.loglike
    
    
      ~PoissonOffsetGMLE.loglikeobs
    
    
      ~PoissonOffsetGMLE.nloglike
    
    
      ~PoissonOffsetGMLE.nloglikeobs
    
    
      ~PoissonOffsetGMLE.predict
    
    
      ~PoissonOffsetGMLE.reduceparams
    
    
      ~PoissonOffsetGMLE.score
    
    
      ~PoissonOffsetGMLE.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~PoissonOffsetGMLE.endog_names
      ~PoissonOffsetGMLE.exog_names
   
   