0.10.0rc1/_sources/generated/statsmodels.miscmodels.count.PoissonOffsetGMLE.rst.txt
statsmodels.miscmodels.count.PoissonOffsetGMLE
==============================================

.. currentmodule:: statsmodels.miscmodels.count

.. autoclass:: PoissonOffsetGMLE

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         PoissonOffsetGMLE.expandparams
         PoissonOffsetGMLE.fit
         PoissonOffsetGMLE.from_formula
         PoissonOffsetGMLE.hessian
         PoissonOffsetGMLE.hessian_factor
         PoissonOffsetGMLE.information
         PoissonOffsetGMLE.initialize
         PoissonOffsetGMLE.loglike
         PoissonOffsetGMLE.loglikeobs
         PoissonOffsetGMLE.nloglike
         PoissonOffsetGMLE.nloglikeobs
         PoissonOffsetGMLE.predict
         PoissonOffsetGMLE.reduceparams
         PoissonOffsetGMLE.score
         PoissonOffsetGMLE.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         PoissonOffsetGMLE.endog_names
         PoissonOffsetGMLE.exog_names

